ldap/kubernetes_config/ldap.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ldap
  namespace: my-vault-demo
spec:
  serviceName: ldap-service
  replicas: 1
  selector:
    matchLabels:
      app: ldap-service
  template:
    metadata:
      labels:
        app: ldap-service
    spec:
      containers:
      - name: ldap-container
        image: osixia/openldap:latest
        ports:
        - containerPort: 389
          protocol: TCP
        - containerPort: 636
          protocol: TCP
      - name: phpldapadmin-container
        image: osixia/phpldapadmin:latest
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: certs-dest
          mountPath: /container/service/phpldapadmin/assets/apache2/certs
      hostname: ldap-service
      dnsPolicy: ClusterFirst
      volumes:
      - name: certs-source
        secret:
          secretName: ldap-secrets
      - name: certs-dest
        emptyDir: {}
---

apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin-service
  labels:
    app: phpldapadmin
spec:
  type: ClusterIP
  selector:
    app: ldap-service
  ports:
  - name: https
    port: 443
    targetPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: ldap-service
  labels:
    app: ldap-service
spec:
  selector:
    app: ldap-service
  ports:
    - name: ldap
      port: 389
      targetPort: 389
    - name: ldaps
      port: 636
      targetPort: 636

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap
  namespace: my-vault-demo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ldap.hashibank.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: phpldapadmin-service
                port:
                  number: 443
  tls:
    - hosts:
        - ldap.hashibank.com
      secretName: ldap-secrets
